# cpp-compile-header2

./: CMakeLists.txt  README.md
include/foo/: header.hpp
src/: main.cpp  src.cpp
